--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "http": "0.0.0",
+    "https": "^1.0.0",
     "npm": "^6.7.0",
     "path": "^0.12.7",
     "socket.io": "^2.2.0"
