--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.16.4",
     "fs": "0.0.1-security",
-    "http": "0.0.0",
-    "https": "^1.0.0",
-    "npm": "^6.7.0",
-    "path": "^0.12.7",
-    "socket.io": "^2.2.0"
+    "node-static": "^0.7.11",
+    "websocket": "^1.0.28"
   }
 }
