--- a/package.json
+++ b/package.json
@@ -1,17 +1,57 @@
 {
-  "name": "owpeer",
-  "version": "1.0.0",
-  "description": "peer 2 peer video oscoweb",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "rtcmulticonnection-server",
+  "preferGlobal": false,
+  "version": "1.3.1",
+  "author": {
+    "name": "Muaz Khan",
+    "email": "muazkh@gmail.com",
+    "url": "https://muazkhan.com/"
   },
-  "author": "Oscar Bout",
-  "license": "MIT",
+  "description": "RTCMultiConnection socket.io server",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/muaz-khan/RTCMultiConnection-Server.git"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "latest"
+  },
+  "main": "./node_scripts/index.js",
+  "keywords": [
+    "peer-to-peer",
+    "peer2peer",
+    "peer",
+    "webrtc",
+    "rtcmulticonnection",
+    "webrtc-library",
+    "library",
+    "javascript",
+    "chrome",
+    "firefox",
+    "opera",
+    "ie",
+    "internet-explorer",
+    "android",
+    "rtcweb",
+    "rtcmulticonnection.js",
+    "multirtc",
+    "webrtc-experiment",
+    "javascript-library",
+    "muaz",
+    "muaz-khan"
+  ],
   "dependencies": {
-    "cors": "^2.8.5",
-    "fs": "0.0.1-security",
-    "node-static": "^0.7.11",
-    "websocket": "^1.0.28"
-  }
+    "socket.io": "latest"
+  },
+  "analyze": false,
+  "license": "MIT",
+  "readmeFilename": "README.md",
+  "bugs": {
+    "url": "https://github.com/muaz-khan/RTCMultiConnection-Server/issues",
+    "email": "muazkh@gmail.com"
+  },
+  "homepage": "https://rtcmulticonnection.herokuapp.com/demos/",
+  "_from": "rtcmulticonnection-server@"
 }
