--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "node server.js"
   },
   "engines": {
-    "node": "latest"
+    "node": "9.x"
   },
   "main": "./node_scripts/index.js",
   "keywords": [
