--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "rtcmulticonnection-server",
-  "version": "1.3.1",
+  "name": "videoCS",
+  "version": "1.0.0",
   "author": {
-    "name": "Muaz Khan",
-    "email": "muazkh@gmail.com",
-    "url": "https://muazkhan.com/"
+    "name": "Oscar Bout",
+    "email": "oscarbout@gmail.com",
+    "url": "https://oscoweb.com/"
   },
   "description": "RTCMultiConnection socket.io server",
   "repository": {
